stylesheets/sass/_media-queries.scss
@media all and (orientation:portrait) {

}

@media all and (orientation:landscape) {

}

@media screen and (max-device-width: 480px) {

  /* html { -webkit-text-size-adjust:none; -ms-text-size-adjust:none; } */
}



#secondary-logo {
	display: none;
}
#container {
	max-width: 1680px;
}

@media screen and (max-width: 1024px) {
	nav#elsewhere {
		li {
			width: 50%;
		}
	}
	footer {
		.logo { 
			width: 100%;
			display: block;
			margin-bottom: 30px;
		}	
		nav {
			width: 30%;
		}
		#fine-print {
			width: 70%;
		}
	}
}
@media screen and (max-width: 980px) {
	#logo {
		display: none;
	}
	#container {
		width: 90%;
	}
	#sidebar, body.post #sidebar, body.about #sidebar {
		margin: 0;
	}
	#main-column, #sidebar, #blog, footer {
		width: 100%;
		display: block;
	} 
	footer {
		margin-left: 0;
	}
	p.intro {
		font-size: 1.166666666666667em; /* /18 */
	}
	nav#elsewhere {
		li {
			width: 25%;
			font-size: 1.333333333333333em; /* /18 */ ;
		}
	}
	#secondary-logo {
		display: inline;
		margin-right: 20px;
		float: left;
		margin-top: -50px;
	}
	header svg {
		float: left;
		margin-bottom: 78px;
	}
	footer {
		margin-top: 0;
	}
}
@media screen and (max-width: 480px) {
	footer {
		nav {
			width: 100%;
			display: block;
			margin-bottom: 30px;
		}
		#fine-print {
			width: 100%;
			display: block;
		}
	}
}

